<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button One"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button Two"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_dark"/>



</LinearLayout>